--- a/pkp-lib/locale/eu_ES/common.xml
+++ b/pkp-lib/locale/eu_ES/common.xml
@@ -323,4 +323,51 @@
 	<message key="common.pluginDisabled">"{$pluginName}" plugina desgaitu da.</message>
 	<message key="common.refresh">Freskatu</message>
 	<message key="common.loading">Kargatzen...</message>
+	<message key="announcement.postedOn">Bidalia {$postDate}</message>
+	<message key="common.accepted">Onartua</message>
+	<message key="common.acknowledged">Jasoa</message>
+	<message key="common.warning">Oharra</message>
+	<message key="common.confirm">Baieztatu</message>
+	<message key="common.content">Edukia</message>
+	<message key="common.considered">Kontuan hartuta</message>
+	<message key="common.declined">Uko egina</message>
+	<message key="common.finish">Amaitua</message>
+	<message key="common.go">Aurrera</message>
+	<message key="common.less">Gutxiago</message>
+	<message key="common.billingAddress">Fakturatze helbidea (desberdina izanez gero)</message>
+	<message key="common.more">Gehiago</message>
+	<message key="common.notified">Jakinarazia</message>
+	<message key="common.noMatches">Ez dago bat datorrenik</message>
+	<message key="common.overdue">Atzeratua</message>
+	<message key="common.reminder">Gogorarazlea</message>
+	<message key="common.remote">Urruneko</message>
+	<message key="common.remoteURL">UrrunekoURL</message>
+	<message key="common.reset">Berrezarri</message>
+	<message key="common.signoff">Itxi saioa</message>
+	<message key="common.element">Elementu</message>
+	<message key="common.unread">Irakurri gabea</message>
+	<message key="common.fileUpload.maxFileSizeStatus"><![CDATA[Zerbitzari honek gehienez {$fileSize} neurria duen fitxategia kargatzen uzten du.  Laguntza behar izanez gero, jarri harremanetan hemen: <a href="mailto:{$supportEmail}">{$supportName}</a>.]]></message>
+	<message key="common.invalidFileType">Ez da fitxategirik kargagu edo fitxategi mota baliogabea da.</message>
+	<message key="common.plugins">Pluginak</message>
+	<message key="email.subjectRequired">Mesedez, idatzi mezuaren gaia</message>
+	<message key="email.bodyRequired">Mesedez, idatzi mezuaren testua</message>
+	<message key="form.confirmSubmit">Ziur zaude inprimaki hau bidali nahi duzula?</message>
+	<message key="form.confirmSubmit.title">Baieztatu</message>
+	<message key="form.emailRequired">Beharrezkoa da helbide elektroniko bat.</message>
+	<message key="form.dataHasChanged">Inprimaki honetako datuak aldatu dira. Jarraitu hala ere?</message>
+	<message key="form.invalidImage">Irudi baliogabe bat kargatu da. Onartzen diren formatuak: .png, .gif, edo .jpg.</message>
+	<message key="navigation.website">Webgunea</message>
+	<message key="navigation.admin">Administrazioa</message>
+	<message key="navigation.data">Datuak</message>
+	<message key="navigation.settings">Ezarpenak</message>
+	<message key="navigation.sitemap">Gunearen mapa</message>
+	<message key="navigation.system">Sistema</message>
+	<message key="navigation.userManagement">Erabiltzaileen kudeaketa</message>
+	<message key="help.toggleInlineHelpOn">Laguntza aktibatua</message>
+	<message key="help.toggleInlineHelpOff">Laguntza desaktibatua</message>
+	<message key="navigation.browseByAuthor">Egileka</message>
+	<message key="navigation.publicMenu">Menu publikoa</message>
+	<message key="navigation.setup">Konfigurazioa</message>
+	<message key="navigation.submissions">Aurkezpenak</message>
+	<message key="navigation.access"><![CDATA[&amp erabiltzaileak; eginkizunak]]></message>
 </locale>
