--- a/pkp-lib/locale/nl_NL/reader.xml
+++ b/pkp-lib/locale/nl_NL/reader.xml
@@ -128,7 +128,7 @@
 	<message key="rt.metadata.pkp.source">Tijdschrift/conferentie titel; vol., no. (jaar)</message>
 	<message key="rt.metadata.pkp.sponsors">Sponsor(s)</message>
 	<message key="rt.metadata.pkp.subjectClass">Onderwerpsclassificatie</message>
-	<message key="rt.metadata.pkp.subject">Sleutelwoord(en)</message>
+	<message key="rt.metadata.pkp.subject">Trefwoord(en)</message>
 	<message key="rt.metadata.pkp.suppFiles">Aanv. bestanden</message>
 	<message key="rt.metadata.pkp.title">Titel van het document</message>
 	<message key="rt.metadata.pkp.type">Type</message>
