--- a/pkp-lib/locale/no_NO/submission.xml
+++ b/pkp-lib/locale/no_NO/submission.xml
@@ -230,4 +230,41 @@
 	<message key="submission.citations.editor.details.checkInGoogleScholar">Sjekk i Google Scholar</message>
 	<message key="submission.citations.editor.details.changeFieldInfo">Skriv de første tegnene for å velge ...</message>
 	<message key="submission.citations.editor.details.citationExportPreview">Forhåndsvisning av referanseeksport</message>
+	<message key="submission.addFile">Last opp fil</message>
+	<message key="submission.citations">Referanser</message>
+	<message key="submission.citations.editor.details.queryGoogleScholar">Søk i Google Scholar</message>
+	<message key="submission.citations.editor.details.saveAndApprove">Lagre og godkjenn</message>
+	<message key="submission.citations.editor.details.sendAuthorQuery">Send melding</message>
+	<message key="submission.citations.editor.details.sendAuthorQuerySuccess">Melding sent!</message>
+	<message key="submission.citations.editor.details.sourceResultsUse">Bruk</message>
+	<message key="submission.citations.editor.details.sourceResultsUseAll">Bruk alle</message>
+	<message key="submission.citations.editor.details.dontShowMessageAgain">Ikke vis denne meldingen igjen.</message>
+	<message key="submission.citations.editor.introduction">Introdusjon</message>
+	<message key="submission.citations.editor.pleaseSelect">Vennligst velg...</message>
+	<message key="metadata.property.displayName.title">Tittel</message>
+	<message key="submission.fileDetails">Fildetaljer</message>
+	<message key="submission.nameRequired">Det kreves et navn for dette elementet</message>
+	<message key="metadata.property.displayName.article-title">Artikkelens tittel</message>
+	<message key="submission.citations.editor.details.googleScholar">Google Scholar</message>
+	<message key="submission.citations.metadata.changeWarning">Er du sikker på at du vil oppdatere referanselisten din? Dersom du klikker OK vil endringer gjort av redaktøren overskrives. Vennligst kontakt redaktøren som har ansvar for din innlevering, dersom du ikke er sikker på om du burde gjøre endringer i referanselisten.</message>
+	<message key="submission.citations.editor.unprocessedCitationsButton">Oppdater siteringslisten</message>
+	<message key="submission.citations.editor.unprocessedCitationsButtonTitle">Klikk for å oppdatere siteringslisten</message>
+	<message key="metadata.property.displayName.source">Publiseringstittel</message>
+	<message key="metadata.property.displayName.annotation">Merknad</message>
+	<message key="metadata.property.displayName.publication-type">Publiseringstype</message>
+	<message key="metadata.property.displayName.subTitle">Undertittel</message>
+	<message key="submission.citations.editor.export">Eksportér siteringer</message>
+	<message key="metadata.property.displayName.nonSort">Deler av tittel ignorert mens sorteringen pågår</message>
+	<message key="metadata.property.validationMessage.nonSort">Vennligst bare skriv de første tegnene av tittelen som skal ignoreres når tittelen sorteres.</message>
+	<message key="metadata.property.validationMessage.title">Vennligst legg til en gyldig tittel.</message>
+	<message key="metadata.property.validationMessage.subTitle">Vennligst legg til en gyldig undertittel.</message>
+	<message key="metadata.property.displayName.name-type">Navnetype</message>
+	<message key="metadata.property.validationMessage.name-type">Vennligst sørg for å legge til en gyldig navnetype. Verdier som 'personlig', 'bedrift' og 'konferanse' er verdier som støttes.</message>
+	<message key="submission.citations.editor.details.processRawCitation">Prosess</message>
+	<message key="submission.citations.editor.details.processRawCitationGoAhead">Gå videre</message>
+	<message key="submission.citations.editor.edit">Endre siteringer</message>
+	<message key="metadata.property.validationMessage.article-title">Vennligst oppgi en gyldig artikkeltittel</message>
+	<message key="metadata.property.validationMessage.source">Vennligs oppgi en gyldig publikasjonstittel</message>
+	<message key="submission.citations.editor.details.saveAndRevokeApproval">Tilbakekall godkjenning</message>
+	<message key="submission.form.replaceExisting">Erstatte eksisterende fil?</message>
 </locale>
