--- a/pkp-lib/locale/ru_RU/common.xml
+++ b/pkp-lib/locale/ru_RU/common.xml
@@ -127,7 +127,6 @@
 	<message key="common.notAvailable">Недоступно</message>
 	<message key="common.note">Примечание</message>
 	<message key="common.notes">Примечания</message>
-	<message key="common.notify">Уведомить</message>
 	<message key="common.off">off</message>
 	<message key="common.on">on</message>
 	<message key="common.options">Опции</message>
@@ -315,4 +314,33 @@
 	<message key="common.preview">Предпросмотр</message>
 	<message key="common.activate">Включить</message>
 	<message key="common.deactivate">Выключить</message>
+	<message key="common.warning">Предупреждение</message>
+	<message key="common.content">Содержание</message>
+	<message key="common.fullscreen">Полноэкранный режим</message>
+	<message key="common.fullscreenOff">Выйти из полноэкранного режима</message>
+	<message key="common.less">Меньше</message>
+	<message key="common.billingAddress">Адрес покупателя (если отличается)</message>
+	<message key="common.more">Больше</message>
+	<message key="common.noMatches">Нет совпадений</message>
+	<message key="common.ok">OK</message>
+	<message key="common.pluginEnabled">Модуль "{$pluginName}" был включен.</message>
+	<message key="common.pluginDisabled">Модуль "{$pluginName}" был выключен.</message>
+	<message key="common.element">Элемент</message>
+	<message key="common.loading">Загрузка...</message>
+	<message key="common.plugins">Модули</message>
+	<message key="email.subjectRequired">Пожалуйста, укажите тему письма.</message>
+	<message key="email.bodyRequired">Пожалуйста, введите текст письма.</message>
+	<message key="form.confirmSubmit">Вы уверены, что хотите отослать эту форму?</message>
+	<message key="form.confirmSubmit.title">Подтвердить</message>
+	<message key="form.emailRequired">Необходимо указать адрес email.</message>
+	<message key="form.dataHasChanged">Данные этой формы были изменены. Продолжить в любом случае?</message>
+	<message key="navigation.website">Веб-сайт</message>
+	<message key="navigation.access">Пользователи и роли</message>
+	<message key="navigation.admin">Администрация</message>
+	<message key="navigation.browseByAuthor">По автору</message>
+	<message key="navigation.data">Данные</message>
+	<message key="navigation.settings">Настройки</message>
+	<message key="navigation.setup">Установка</message>
+	<message key="navigation.sitemap">Карта сайта</message>
+	<message key="navigation.system">Система</message>
 </locale>
