--- a/pkp-lib/locale/sr_SR/common.xml
+++ b/pkp-lib/locale/sr_SR/common.xml
@@ -30,7 +30,6 @@
 	<message key="announcement.posted">Objavljeno</message>
 	<message key="announcement.viewLink">Više...</message>
 	<message key="announcement.view">Pregledaj obaveštenja</message>
-	<message key="common.actingAsUserGroup.userIsNotInTargetUserGroup">Niste u ovoj korisničkoj grupi.</message>
 	<message key="common.action">Akcija</message>
 	<message key="common.activate">Aktiviraj</message>
 	<message key="common.active">Aktivno</message>
@@ -131,7 +130,6 @@
 	<message key="common.notAvailable">Nije dostupno</message>
 	<message key="common.note">Napomena</message>
 	<message key="common.notes">Napomene</message>
-	<message key="common.notify">Obavesti</message>
 	<message key="common.off">Isključeno</message>
 	<message key="common.on">Uključeno</message>
 	<message key="common.ok">OK</message>
@@ -300,7 +298,6 @@
 	<message key="notification.reminderError">Došlo je do greške prilikom slanja lozinke, proverite da li ste uneli ispravno Vašu imejl adresu.</message>
 	<message key="notification.reminderSent">Nova lozinka je poslata na imejl adresu koju ste dali.</message>
 	<message key="notification.unsubscribe">Odjavi se</message>
-	<message key="notification.unsubscribeDescription">Unesite Vašu imejl adresu i lozinku kako biste se odjavili sa sistema imejl obaveštenja. Ukoliko se ne sećate Vaše lozinke ostavite polje prazno i nova će Vam biti poslata na navedenu imejl adresu.</message>
 	<message key="notification.unsubscribeError">Došlo je do greške prilikom Vaše odjave. Molimo Vas da proverite da li su imejl adresa i lozinka ispravne.</message>
 	<message key="notification.unsubscribeSuccess">Uspešno ste odjavljeni.</message>
 	<message key="search.abstract">Apstrakt</message>
@@ -326,4 +323,52 @@
 	<message key="search.titleIndex">Indeks naslova</message>
 	<message key="search.title">Naslov</message>
 	<message key="search.typeMethodApproach">Tip (metod/pristup)</message>
+	<message key="announcement.postedOn">Objavljeno {$postDate}</message>
+	<message key="common.accepted">Prihvaćeno</message>
+	<message key="common.acknowledged">Potvrđeno</message>
+	<message key="common.titleSmallWords">of a the and an or nor but is if then else when at from by on off for in out over to into with</message>
+	<message key="common.warning">Upozorenje</message>
+	<message key="common.confirm">Potvrdi</message>
+	<message key="common.content">Sadržaj</message>
+	<message key="common.considered">Smatran</message>
+	<message key="common.declined">Odbijen</message>
+	<message key="common.finish">Završi</message>
+	<message key="common.go">Idi</message>
+	<message key="common.less">Manje</message>
+	<message key="common.billingAddress">Adresa za naplatu (ukoliko je drugačija)</message>
+	<message key="common.more">Više</message>
+	<message key="common.notified">Obavešteno</message>
+	<message key="common.noMatches">Nema odgovarajućih</message>
+	<message key="common.overdue">Prekoračen</message>
+	<message key="common.reminder">Podsetnik</message>
+	<message key="common.remote">Udaljeno</message>
+	<message key="common.remoteURL">Udaljeni URL</message>
+	<message key="common.reset">Resetuj</message>
+	<message key="common.signoff">Odjavi se</message>
+	<message key="common.element">Element</message>
+	<message key="common.unread">Nije pročitano</message>
+	<message key="common.fileUpload.maxFileSizeStatus"><![CDATA[Server dozvoljava maksimalnu veličinu fajla koji se dodaje od {$fileSize}. Ukoliko je potrebno, kontaktirajte <a href="mailto:{$supportEmail}">{$supportName}</a> za pomoć.]]></message>
+	<message key="common.invalidFileType">Fajl nije dodat ili je u pogrešnom formatu!</message>
+	<message key="common.plugins">Dodaci</message>
+	<message key="email.subjectRequired">Dodajte temu imejla.</message>
+	<message key="email.bodyRequired">Dodajte tekst imejla.</message>
+	<message key="form.confirmSubmit">Da li ste sigurni da želite da pošaljete ovu formu?</message>
+	<message key="form.confirmSubmit.title">Potvrdi</message>
+	<message key="form.emailRequired">Imejl adresa je neophodna</message>
+	<message key="form.dataHasChanged">Podaci u formi su promenjeni, da li ipak želite da nastavite?</message>
+	<message key="form.invalidImage">Nesipravna sllika je dostavljena, podržani formati su .png, .gif ili .jpg.</message>
+	<message key="help.toggleInlineHelpOn">Pomoć uključena</message>
+	<message key="help.toggleInlineHelpOff">Pomoć isključena</message>
+	<message key="navigation.website">Sajt</message>
+	<message key="navigation.access"><![CDATA[Korisnici &amp; uloge]]></message>
+	<message key="navigation.admin">Administracija</message>
+	<message key="navigation.browseByAuthor">Po autoru</message>
+	<message key="navigation.data">Podaci</message>
+	<message key="navigation.publicMenu">Javni meni</message>
+	<message key="navigation.settings">Podešavanja</message>
+	<message key="navigation.setup">Nameštanje</message>
+	<message key="navigation.sitemap">Mapa sajta</message>
+	<message key="navigation.submissions">Predaja</message>
+	<message key="navigation.system">Sistem</message>
+	<message key="navigation.userManagement">Menadžment korisnika</message>
 </locale>
