--- a/pkp-lib/locale/sr_SR/reader.xml
+++ b/pkp-lib/locale/sr_SR/reader.xml
@@ -177,4 +177,5 @@
 	<message key="rt.version.title">Naslov</message>
 	<message key="rt.version">Verzija</message>
 	<message key="rt.viewMetadata">Indeksiranje metapodataka</message>
+	<message key="rt.admin.settings.viewReviewPolicy">Prikaži politiku recenzija</message>
 </locale>
