--- a/pkp-lib/locale/uk_UA/grid.xml
+++ b/pkp-lib/locale/uk_UA/grid.xml
@@ -130,4 +130,69 @@
 	<message key="grid.user.step2">Крок 2: Дайте призначення користувачу {$userFullName}</message>
 	<message key="grid.user.pleaseSelectUser">Будь ласка, оберіть користувача</message>
 	<message key="grid.plugin.allCategories">Всі категорії</message>
+	<message key="grid.plugin.disable">Ви впевнені, що хочете відключити цей модуль?</message>
+	<message key="grid.action.extendAll">Розгорнути все</message>
+	<message key="grid.action.collapse">Згорнути</message>
+	<message key="grid.action.collapseAll">Згорнути все</message>
+	<message key="grid.action.importexport">Імпорт або експорт змісту/даних сайту</message>
+	<message key="grid.action.orderItems">Дозволити режим сортування</message>
+	<message key="grid.action.expandAll">Розгорнути все</message>
+	<message key="grid.action.expand">Розгорнути</message>
+	<message key="grid.action.history">Дивитися історію</message>
+	<message key="grid.task.status.new">Це новий об'єкт, він потребує уваги</message>
+	<message key="grid.task.status.uploaded">Заголовок колонки вказує, хто вивантажив цей файл</message>
+	<message key="grid.user.authSource">Джерело аутентифікації</message>
+	<message key="grid.user.mustProvideName">Будь ласка, спочатку вкажіть принаймні прізвище користувача.</message>
+	<message key="grid.user.generatePassword">Генерувати пароль</message>
+	<message key="grid.user.generatePasswordDescription">Генерувати випадковий пароль для цього користувача.</message>
+	<message key="grid.user.notifyUser">Сповістити користувача</message>
+	<message key="grid.user.notifyUserDescription">Надіслати користувачу вітального листа.</message>
+	<message key="grid.user.mustChangePasswordDescription">Користувач повинен змінити пароль під час наступного входу до системи.</message>
+	<message key="grid.user.mustChangePasswordDescriptionOld">Вимагати, щоб користувач змінив свій пароль під час наступного входу до системи.</message>
+	<message key="grid.user.moreDetails">Більше інформації про користувача</message>
+	<message key="grid.user.lessDetails">Менше інформації про користувача</message>
+	<message key="grid.user.userDetails">Інформація про користувача</message>
+	<message key="grid.user.userRoles">Ролі користувача</message>
+	<message key="grid.user.userNoRoles">Цей користувач не має жодних ролей.</message>
+	<message key="grid.user.addRoles">Додати ролі</message>
+	<message key="grid.user.selectUser">Обрати користувача</message>
+	<message key="grid.action.unassignUser">Скасувати призначення користувача</message>
+	<message key="grid.columns.locale">Локалізація</message>
+	<message key="grid.user.currentUsers">Поточні користувачі</message>
+	<message key="grid.user.currentEnrollment">Поточні призначення</message>
+	<message key="grid.user.enable">Включити</message>
+	<message key="grid.user.disable">Відключити</message>
+	<message key="grid.user.disableReason">Причина відключення користувача</message>
+	<message key="grid.user.enableReason">Причина включення користувача</message>
+	<message key="grid.preparedEmails.title">Шаблони підготованих листів</message>
+	<message key="grid.preparedEmails.description">Видавництво може значно полегшити процеси комунікації шляхом використання шаблонів типових листів. Нижче подані засоби для легкого редагування змісту цих шаблонів.</message>
+	<message key="grid.action.addAuditor">Додати аудитора</message>
+	<message key="grid.action.readReview">Читати цю рецензію</message>
+	<message key="grid.action.requestRevisions">Вимагати ревізії цього подання</message>
+	<message key="grid.action.resubmit">Вимагати, щоб це подання було повторно надіслане для додаткового рецензування</message>
+	<message key="grid.action.sendToProduction">Надіслати це подання у робочу чергу</message>
+	<message key="grid.action.addSignoff">Додати результат аудиту цього файлу</message>
+	<message key="grid.action.deleteSignoff">Видалити цей дозвіл</message>
+	<message key="grid.action.fileSignoff">Дозвіл для цього файлу</message>
+	<message key="grid.action.readSignoff">Читати цей дозвіл</message>
+	<message key="grid.action.details">Дивитися цей об'єкт</message>
+	<message key="grid.columns.auditor">Аудитор</message>
+	<message key="grid.action.addSeries">Додати серії</message>
+	<message key="grid.action.editSeries">Редагувати серії</message>
+	<message key="grid.action.deleteSeries">Видалити серії</message>
+	<message key="grid.genres.title">Жанри</message>
+	<message key="grid.genres.description">Ці жанри використовуються для іменування файлів, вони відображаються у спадаючому меню вивантаження файлів. Жанри, вказані як ## дозволяють користувачу асоціювати файл з цілою книжкою 99Z або з конкретною її нумерованою частиною (наприклад, 02).</message>
+	<message key="grid.roles.currentRoles">Поточні ролі</message>
+	<message key="grid.preparedEmails.currentList">Поточний список</message>
+	<message key="grid.action.deleteMedia">Видалити медіа</message>
+	<message key="grid.action.editMedia">Редагувати медіа</message>
+	<message key="grid.action.moveItem">Перемістити об'єкт</message>
+	<message key="grid.action.selectFiles">Оберіть портібні файли</message>
+	<message key="grid.action.sendReminder">Надіслати користувачу нагадування про завдання</message>
+	<message key="grid.action.newRound">Створити новий раунд</message>
+	<message key="grid.action.mergeUser">Об'єднати користувача</message>
+	<message key="grid.task.status.unfinished">Незавершені рецензії</message>
+	<message key="grid.task.status.reviewReady">Ця рецензія готова. Щоб прочитати її натисніть на зображення ліворуч.</message>
+	<message key="grid.roles.stageAssignment">Призначення стадії</message>
+	<message key="grid.action.disable">ВІдключити</message>
 </locale>
