--- a/pkp-lib/plugins/citationParser/paracite/locale/tr_TR/locale.xml
+++ b/pkp-lib/plugins/citationParser/paracite/locale/tr_TR/locale.xml
@@ -12,4 +12,5 @@
 
 <locale name="tr_TR" full_name="Türkiye Türkçesi">
 	<message key="plugins.citationParser.paracite.displayName">ParaCite Atıf Ayırıcı</message>
+	<message key="plugins.citationParser.paracite.description">ParaCite servisi üzerinden düz metin atıf alanlarını ayıklar.</message>
 </locale>
