--- a/pkp-lib/locale/eu_ES/submission.xml
+++ b/pkp-lib/locale/eu_ES/submission.xml
@@ -357,4 +357,30 @@
 	<message key="submission.nameRequired">Elementu honek izena behar du.</message>
 	<message key="submission.date.mmdd">HH-EE</message>
 	<message key="submission.date.yyyymmdd">UUUU-HH-EE</message>
+	<message key="metadata.property.displayName.name-type">Izen mota</message>
+	<message key="submission.addFile">Kargatu fitxategia</message>
+	<message key="submission.citations.editor.citationlist.approved">Onartua</message>
+	<message key="submission.citations.editor.citationlist.notApproved">Ez onartua</message>
+	<message key="submission.layout.galleyRemoteURL">Urruneko URL</message>
+	<message key="submission.reviewed">Berrikusia</message>
+	<message key="metadata.property.displayName.title-type">Titulu mota</message>
+	<message key="metadata.property.validationMessage.title-type">Mesedez, ziur izan titulu mota baliodun bat ezartzen duzula. Balio onartuak 'laburtua', 'itzulia', 'alternatiboa' eta 'uniformea' dira.</message>
+	<message key="metadata.property.displayName.nonSort">Tituluaren zati bat ez da kontuan hartu sailkatzean.</message>
+	<message key="metadata.property.displayName.title">Titulua</message>
+	<message key="metadata.property.validationMessage.title">Mesedez, sartu titulu baliodun bat.</message>
+	<message key="metadata.property.validationMessage.nonSort">Mesedez, sartu soilik titulua sailkatzean kontuan hartu beharko ez liratekeen tituluaren hasierako hizkiak.</message>
+	<message key="metadata.property.displayName.subTitle">Azpidatzia</message>
+	<message key="metadata.property.validationMessage.subTitle">Mesedez, sartu azpidatzi baliodun bat.</message>
+	<message key="metadata.property.displayName.partNumber">Zatiaren zenbakia</message>
+	<message key="metadata.property.validationMessage.partNumber">Mesedez, sartu zatiaren zenbaki baliodun bat.</message>
+	<message key="metadata.property.displayName.partName">Zatiaren izena</message>
+	<message key="metadata.property.validationMessage.partName">Mesedez, sartu zatiaren izen baliodun bat.</message>
+	<message key="metadata.property.validationMessage.name-type">Mesedez, ziur izan izen mota baliodun bat ezartzen duzula. Balio onartua 'pertsonala', 'korporatiboa' eta 'konferentzia' dira.</message>
+	<message key="submission.comments.addReviews">Erantsi berrikuspenak posta elektronikoari</message>
+	<message key="submission.copyedited">Zuzendua</message>
+	<message key="submission.layout.galleyRemoteURLValid">Mesedez, eman urruneko URL baliodun bat (sartu http://)</message>
+	<message key="submission.supportingAgencies">Agentzia babesleak</message>
+	<message key="submission.createRemote">Sortu urrunekoa</message>
+	<message key="submission.form.name">Eman fitxategi honi izen erabilgarri bat</message>
+	<message key="submission.form.replaceExisting">Ordeztu jada badagoen fitxategi bat?</message>
 </locale>
