--- a/pkp-lib/locale/it_IT/common.xml
+++ b/pkp-lib/locale/it_IT/common.xml
@@ -368,4 +368,8 @@
 	<message key="form.confirmSubmit">Sei sicuro di concludere questo formulario?</message>
 	<message key="form.dataHasChanged">I dati nel formulario sono cambiati. Continui ugualmente?</message>
 	<message key="navigation.sitemap">Mappa del sito</message>
+	<message key="common.acknowledged">Riconosciuto</message>
+	<message key="common.considered">Considerato</message>
+	<message key="common.notified">Notificato</message>
+	<message key="common.reset">Reset</message>
 </locale>
