--- a/pkp-lib/locale/it_IT/grid.xml
+++ b/pkp-lib/locale/it_IT/grid.xml
@@ -187,4 +187,9 @@
 	<message key="grid.action.fileSignoff">Approva questo file</message>
 	<message key="grid.action.deleteSignoff">Cancella questa approvazione</message>
 	<message key="grid.action.readSignoff">Leggi questa approvazione</message>
+	<message key="grid.action.mergeUser">Fondi utenti</message>
+	<message key="grid.action.history">Vedi registro</message>
+	<message key="grid.task.status.unfinished">Revisioni non completate</message>
+	<message key="grid.task.status.reviewReady">Questa revisione è completa. Clicca sull'icona a sinistra per leggerla.</message>
+	<message key="grid.action.unassignUser">Esenta l'utente</message>
 </locale>
