--- a/pkp-lib/locale/nl_NL/manager.xml
+++ b/pkp-lib/locale/nl_NL/manager.xml
@@ -12,45 +12,45 @@
   -->
 
 <locale name="nl_NL" full_name = "Nederlands">
-	<message key="manager.announcements">Aankondigingen</message>
-	<message key="manager.announcements.confirmDelete">Weet u zeker dat u deze aankondiging wilt verwijderen?</message>
-	<message key="manager.announcements.create">Nieuwe aankondiging maken</message>
+	<message key="manager.announcements">Nieuwsberichten</message>
+	<message key="manager.announcements.confirmDelete">Weet u zeker dat u dit nieuwsbericht wilt verwijderen?</message>
+	<message key="manager.announcements.create">Nieuw nieuwsbericht maken</message>
 	<message key="manager.announcements.createTitle">Aanmaken</message>
 	<message key="manager.announcements.dateExpire">Verloopt</message>
 	<message key="manager.announcements.edit">Edit Announcement</message>
 	<message key="manager.announcements.editTitle">Bewerken</message>
 	<message key="manager.announcements.form.dateExpireDayIncompleteDate">Kies een jaar en/of maand naast de dag van de afloopdatum.</message>
 	<message key="manager.announcements.form.dateExpire">Afloopdatum</message>
-	<message key="manager.announcements.form.dateExpireInstructions">De aankondiging wordt tot de afloopdatum getoond aan de lezers. Leeg laten als de aankondiging blijvend getoond moet worden.</message>
+	<message key="manager.announcements.form.dateExpireInstructions">Het nieuwsbericht wordt tot de afloopdatum getoond aan de lezers. Leeg laten als het nieuwsbericht blijvend getoond moet worden.</message>
 	<message key="manager.announcements.form.dateExpireMonthIncompleteDate">Kies een jaar en/of dag naast de maand van de afloopdatum.</message>
-	<message key="manager.announcements.form.dateExpireValid">Kies een geldige afloopdatum voor de aankondiging.</message>
+	<message key="manager.announcements.form.dateExpireValid">Kies een geldige afloopdatum voor het nieuwsbericht.</message>
 	<message key="manager.announcements.form.dateExpireYearIncompleteDate">Kies een maand en/of dag naast het jaar van de afloopdatum.</message>
 	<message key="manager.announcements.form.description">Beschrijving</message>
-	<message key="manager.announcements.form.descriptionInstructions">De complete tekst van de aankondiging.</message>
+	<message key="manager.announcements.form.descriptionInstructions">De complete tekst van het nieuwsbericht.</message>
 	<message key="manager.announcements.form.descriptionRequired">Een beschrijving is verplicht.</message>
-	<message key="manager.announcements.form.descriptionShortInstructions">Een korte beschrijving die bij de titel van de aankondiging getoond wordt.</message>
+	<message key="manager.announcements.form.descriptionShortInstructions">Een korte beschrijving die bij de titel van het nieuwsbericht getoond wordt.</message>
 	<message key="manager.announcements.form.descriptionShortRequired">Een korte beschrijving is verplicht.</message>
 	<message key="manager.announcements.form.descriptionShort">Korte beschrijving</message>
 	<message key="manager.announcements.form.saveAndCreateAnother">Bewaar en maak er nog een aan</message>
-	<message key="manager.announcements.form.titleRequired">Een titel voor de aankondiging is verplicht.</message>
+	<message key="manager.announcements.form.titleRequired">Een titel voor het nieuwsbericht is verplicht.</message>
 	<message key="manager.announcements.form.title">Titel</message>
 	<message key="manager.announcements.form.typeId">Type</message>
-	<message key="manager.announcements.form.typeIdValid">Kies een geldig aankondigingstype.</message>
-	<message key="manager.announcements.noneCreated">Er zijn geen aankondigingen aangemaakt.</message>
+	<message key="manager.announcements.form.typeIdValid">Kies een geldig nieuwsberichttype.</message>
+	<message key="manager.announcements.noneCreated">Er zijn geen nieuwsberichten aangemaakt.</message>
 	<message key="manager.announcements.title">Titel</message>
 	<message key="manager.announcements.type">Type</message>
-	<message key="manager.announcementTypes">Type aankondigingen</message>
-	<message key="manager.announcementTypes.confirmDelete">Waarschuwing! Alle aankondigingen van dit type worden ook verwijderd.Weet u zeker dat u door wilt gaan en dit aankondigingstype wilt verwijderen?</message>
-	<message key="manager.announcementTypes.create">Aankondigingstype aanmaken</message>
+	<message key="manager.announcementTypes">Nieuwsberichttypes</message>
+	<message key="manager.announcementTypes.confirmDelete">Waarschuwing! Alle nieuwsberichten van dit type worden ook verwijderd.Weet u zeker dat u door wilt gaan en dit nieuwsberichttype wilt verwijderen?</message>
+	<message key="manager.announcementTypes.create">Nieuwsberichttype aanmaken</message>
 	<message key="manager.announcementTypes.createTitle">Aanmaken</message>
-	<message key="manager.announcementTypes.edit">Bewerk aankondigingstype</message>
+	<message key="manager.announcementTypes.edit">Bewerk nieuwsberichttype</message>
 	<message key="manager.announcementTypes.editTitle">Bewerken</message>
 	<message key="manager.announcementTypes.form.saveAndCreateAnother">Bewaar en maak er nog een aan</message>
-	<message key="manager.announcementTypes.form.typeNameExists">Er bestaat al een aankondigingstype met deze naam.</message>
+	<message key="manager.announcementTypes.form.typeNameExists">Er bestaat al een nieuwsberichttype met deze naam.</message>
 	<message key="manager.announcementTypes.form.typeName">Naam</message>
-	<message key="manager.announcementTypes.form.typeNameRequired">Een naam voor het aankondigingstype is verplicht.</message>
-	<message key="manager.announcementTypes.noneCreated">Er zijn geen aankondigingstypes aangemaakt.</message>
-	<message key="manager.announcementTypes.typeName">Aankondigingstype</message>
+	<message key="manager.announcementTypes.form.typeNameRequired">Een naam voor het nieuwsberichttype is verplicht.</message>
+	<message key="manager.announcementTypes.noneCreated">Er zijn geen nieuwsberichttypes aangemaakt.</message>
+	<message key="manager.announcementTypes.typeName">Nieuwsberichttype</message>
 	<message key="manager.emails.confirmDelete">Weet u zeker dat u dit e-mail sjabloon wilt verwijderen?</message>
 	<message key="manager.emails.confirmReset">Weet u zeker da u dit e-mail sjabloon wilt terugzetten naar de standaardwaarde?</message>
 	<message key="manager.emails.createEmail">E-mail aanmaken</message>
@@ -95,7 +95,7 @@
 	<message key="manager.people.confirmUnenroll">Deze gebruiker uitschrijven?</message>
 	<message key="manager.people.createUser">Maak een nieuwe gebruiker aan</message>
 	<message key="manager.people.createUserGeneratePassword">Genereer een willekeurig wachtwoord.</message>
-	<message key="manager.people.createUserSendNotify">Suur de gebruiker een e-mail met hun gebruikersnaam en wachtwoord.</message>
+	<message key="manager.people.createUserSendNotify">Stuur de gebruiker een e-mail met hun gebruikersnaam en wachtwoord.</message>
 	<message key="manager.people.disable">Blokkeer</message>
 	<message key="manager.people.doNotEnroll">Zonder rol</message>
 	<message key="manager.people.editProfile">Bewerk profiel</message>
@@ -108,11 +108,11 @@
 	<message key="manager.people.enable">Toelaten</message>
 	<message key="manager.people.enroll">Gebruiker inschrijven</message>
 	<message key="manager.people.enrollment">Inschrijving</message>
-	<message key="manager.people.enrollSelected">Schijf de geselecteerde gebruikers in</message>
+	<message key="manager.people.enrollSelected">Schrijf de geselecteerde gebruikers in</message>
 	<message key="manager.people.enrollSyncRole">Synchroniseer rollen</message>
 	<message key="manager.people.enrollSync">Synchroniseer inschrijving</message>
 	<message key="manager.people.enrollUserAsDescription">Gebruikers kunnen op ieder moment een rol krijgen of daarvan ontheven worden.</message>
-	<message key="manager.people.enrollUserAs">Schijf gebruiker in als</message>
+	<message key="manager.people.enrollUserAs">Schrijf gebruiker in als</message>
 	<message key="manager.people.invalidUser">Sorry, de gevraagde gebruiker bestaat niet.</message>
 	<message key="manager.people.mergeUser">Gebruiker samenvoegen</message>
 	<message key="manager.people.mergeUsers.confirm">Weer u zeker dat u de geselecteerde {$oldAccountCount} account(s) wilt samenvoegen met "{$newUsername}"? de geselecteerde {$oldAccountCount} account(s) zullen achteraf niet meer bestaan. Deze actie is onomkeerbaar.</message>
@@ -121,7 +121,7 @@
 	<message key="manager.people.mustProvideName">Svp eerst minimaal een achternaam voor de gebruiker opgeven.</message>
 	<message key="manager.people.noMatchingUsers">Geen passende gebruikers.</message>
 	<message key="manager.people.noneEnrolled">Geen gebruikers ingeschreven.</message>
-	<message key="manager.people">Mensen</message>
+	<message key="manager.people">Contact</message>
 	<message key="manager.people.remove">Verwijder</message>
 	<message key="manager.people.saveAndCreateAnotherUser">Bewaren en een volgende aanmaken</message>
 	<message key="manager.people.signInAs">Inloggen als</message>
@@ -136,7 +136,7 @@
 	<message key="manager.plugins.pluginManagement">Plugin beheer</message>
 	<message key="manager.plugins.sitePlugin">Dit is een site-plugin. Alleen de sitebeheerder kan deze plugin beheren.</message>
 	<message key="manager.plugins">Systeemplugins</message>
-	<message key="manager.readingTools">Hulpmiddelen</message>
+	<message key="manager.readingTools">Leesgereedschappen</message>
 	<message key="manager.roles">Rollen</message>
 	<message key="manager.setup.homeHeaderImageInvalid">Onbruikbaar bestandsformaat voor het home-pagina koptekst-logo. Bruikbaar zijn .gif, .jpg of .png.</message>
 	<message key="manager.setup.homepageImageInvalid">Onbruikbaar bestandsformaat voor de home-pagina afbeelding. Bruikbaar zijn .gif, .jpg of .png.</message>
@@ -183,8 +183,8 @@
 	<message key="manager.reviewerSearch.activeAmount">Aantal actieve reviews</message>
 	<message key="manager.reviewerSearch.interests">Review interesses</message>
 	<message key="manager.setup.citationAssistant">Citatie-markering assistent</message>
-	<message key="manager.setup.citationFilterParser">Ctaties extraheren</message>
-	<message key="manager.setup.citationFilterParserDescription"><![CDATA[<p>Om citaties te vinden en controleren in citatiedatabanken moeten ze eerst opgeplitst worden tot machineleesbare metadata: titel, uitgever, publicatiedatum enz. moeten geëxtraheerd worden uit de originele citatie van de auteur. Connectors naar externe webservices kunnen assisteren in dit proces. Connectors kunnen toegevoegd worden door hieronder op de "Voeg onderdeel toe" knop te klikken. Sommige connectors moeten verder geconfigureerd worden. Als dat het geval is, zullen nadere vragen gesteld worden.</p>
+	<message key="manager.setup.citationFilterParser">Citaties extraheren</message>
+	<message key="manager.setup.citationFilterParserDescription"><![CDATA[<p>Om citaties te vinden en controleren in citatiedatabanken moeten ze eerst opgesplitst worden tot machineleesbare metadata: titel, uitgever, publicatiedatum enz. moeten geëxtraheerd worden uit de originele citatie van de auteur. Connectors naar externe webservices kunnen assisteren in dit proces. Connectors kunnen toegevoegd worden door hieronder op de "Voeg onderdeel toe" knop te klikken. Sommige connectors moeten verder geconfigureerd worden. Als dat het geval is, zullen nadere vragen gesteld worden.</p>
 		<p>U kunt een bestaande connector bewerken of verwijderen door te klikken op het tandwiel-ikoon ernaast.</p>]]></message>
 	<message key="manager.setup.filter.lookup.grid.descriptionConfirm">Klik op 'OK' om het toevoegen van de {$filterDisplayName} databank te bevestigen.</message>
 	<message key="manager.setup.filter.lookup.grid.descriptionTemplate">Selecteer een databank</message>
@@ -194,7 +194,7 @@
 	<message key="manager.setup.filter.parser.grid.descriptionConfirm">Klik op 'OK' om het toevoegen van de {$filterDisplayName} parser te bevestigen.</message>
 	<message key="manager.setup.filter.parser.grid.descriptionTemplate">Kies een citatie-parser</message>
 	<message key="manager.setup.filter.pleaseSelect">Kies...</message>
-	<message key="manager.setup.citationOutput">Ciratie uitvoer</message>
+	<message key="manager.setup.citationOutput">Citatie uitvoer</message>
 	<message key="manager.setup.citationOutputStyleDescription">Kies de citatiestijl die wordt gebruikt in de inzendingen van uw tijdschrift. De citatie markeringsassistent laat u de auteursversie van de citatie vergelijken met de versie die gegenereerd is uit de XML die u maakt zodat u fouten eenvoudig kunt herkennen:</message>
 	<message key="manager.setup.filter.lookup.grid.description.iSBNdb"><![CDATA[<p>Dit filter maakt verbinding met de <a href="http://isbndb.com/" target="_blank">ISBNdb.com</a> boek en ISBN databank.</p>
 	<p>Een ISBNdb API sleutel is een vereiste. Voor meer informatie over het genereren van een sleutel zie de <a href="http://isbndb.com/docs/api/30-keys.html" target="_blank">online documentatie</a>.</p>]]></message>
