--- a/pkp-lib/locale/no_NO/common.xml
+++ b/pkp-lib/locale/no_NO/common.xml
@@ -366,4 +366,5 @@
 	<message key="common.remote">Ekstern</message>
 	<message key="common.remoteURL">Ekstern URL</message>
 	<message key="navigation.sitemap">Nettstedskart</message>
+	<message key="common.reset">Tilbakestill</message>
 </locale>
