--- a/pkp-lib/locale/no_NO/manager.xml
+++ b/pkp-lib/locale/no_NO/manager.xml
@@ -209,4 +209,6 @@
 	<p>En ISBNdb API-nøkkel er nødvendig. For informasjon om hvordan generere en slik nøkkel, se <a href="http://isbndb.com/docs/api/30-keys.html" target="_blank">dokumentasjon på nett</a>.</p>]]></message>
 	<message key="manager.setup.filter.lookup.grid.description.crossRef"><![CDATA[<p>Dette filteret kobler til CrossRefs referansedatabase ved bruk av CrossRefs <a href="http://www.crossref.org/02publishers/openurl_info.html" target="_blank">OpenURL Query Interface</a>.</p>
 	<p>For å benytte dette filteret kan du bruke din system-konto hos CrossRef, eller registrere en gyldig e-postadresse hos CrossRef <a href="http://www.crossref.org/requestaccount/" target="_blank">her</a>.</p>]]></message>
+	<message key="manager.setup.filter.pleaseSelect">Vennligst velg...</message>
+	<message key="plugins.categories.metadata">Programutvidelser for metadata</message>
 </locale>
