--- a/pkp-lib/locale/no_NO/user.xml
+++ b/pkp-lib/locale/no_NO/user.xml
@@ -104,4 +104,18 @@
 	<message key="user.affiliation.description">(Din institusjon, f.eks. «Det Kongelige Frederiks Universitet»</message>
 	<message key="user.confirmEmail">Bekreft e-post</message>
 	<message key="user.profile.form.affiliationRequired">Institusjonstilhørighet må angis.</message>
+	<message key="user.accountInformation">Kontoinformasjon</message>
+	<message key="user.authorization.loginRequired">Pålogging kreves.</message>
+	<message key="user.group">Brukergruppe</message>
+	<message key="user.hello">Hei,</message>
+	<message key="user.profile.form.passwordSameAsOld">Ditt nye passord er det samme som ditt gamle passord.</message>
+	<message key="user.authorization.accessDenied">Ingen tilgang.</message>
+	<message key="user.authorization.restrictedSiteAccess">Du har blitt nektet adgang. Adgang til denne siden er på nåværende tidspunkt begrenset.</message>
+	<message key="user.gossip">Private notater</message>
+	<message key="user.profile.form.usergroupRequired">En brukergruppe påkreves.</message>
+	<message key="user.authorization.privateOperation">Operasjonen du prøvde å få tilgang er enten privat eller eksisterer ikke.</message>
+	<message key="user.profile.form.countryRequired">Land må oppgis.</message>
+	<message key="user.profile.form.mailingAddressRequired">En postadresse må oppgis.</message>
+	<message key="user.register.form.emailsDoNotMatch">E-postadressene samsvarer ikke med hverandre.</message>
+	<message key="user.suffix">Suffiks</message>
 </locale>
