--- a/pkp-lib/locale/ru_RU/installer.xml
+++ b/pkp-lib/locale/ru_RU/installer.xml
@@ -61,10 +61,10 @@
 	<message key="installer.locale">Язык</message>
 	<message key="installer.locale.maybeIncomplete">Поддержка отмеченных языков может быть неполной.</message>
 	<message key="installer.localeSettings">Настройки Языка</message>
-	<message key="installer.miscSettings">Дополнительные настройки</message>
 	<message key="installer.oaiRepositoryIdInstructions"><![CDATA[Для идентификации записей метаданных (в протоколе <a href="http://www.openarchives.org/" target="_blank">Open Archives Initiative</a> Protocol for Metadata Harvesting) требуется идентификатор, уникальный для данного сайта (хранилища метаданных).]]></message>
 	<message key="installer.oaiRepositoryId">идентификатор хранилища OAI</message>
 	<message key="installer.publicFilesDirError">Каталог, указанный в качестве каталога для принятых файлов, не существует либо защищен от записи.</message>
 	<message key="installer.releaseNotes">Замечания о текущей версии</message>
 	<message key="installer.securitySettings">Установки безопасности</message>
+	<message key="installer.oaiSettings">Настройки OAI</message>
 </locale>
