--- a/pkp-lib/locale/ru_RU/manager.xml
+++ b/pkp-lib/locale/ru_RU/manager.xml
@@ -167,4 +167,17 @@
 	<message key="plugins.categories.reports">Модули Отчетов</message>
 	<message key="plugins.categories.themes.description">Модули Тем позволяют изменить внешний вид системы.</message>
 	<message key="plugins.categories.themes">Модули Тем</message>
+	<message key="manager.emails.addEmail">Добавить шаблон письма</message>
+	<message key="manager.navigation">Навигация</message>
+	<message key="manager.reviewerSearch.advancedSearch">Расширенный поиск рецензентов</message>
+	<message key="manager.reviewerSearch.advancedSearch.short">Расширенный поиск</message>
+	<message key="manager.reviewerSearch.searchByName">Поиск рецензента по имени</message>
+	<message key="manager.reviewerSearch.searchByName.short">Поиск по имени</message>
+	<message key="manager.setup.citationAssistant">Помощник разметки цитат</message>
+	<message key="manager.setup.citationFilterParser">Экстракция цитат</message>
+	<message key="manager.setup.errorDeletingItem">Во время удаления этого объекта возникла ошибка.</message>
+	<message key="manager.setup.filter.parser.grid.title">Службы экстракции цитат</message>
+	<message key="plugins.categories.metadata">Модули метаданных</message>
+	<message key="plugins.categories.citationParser">Модули экстракции цитат</message>
+	<message key="plugins.categories.citationParser.description">Модули экстракции цитат позволяют получать из оригинальных цитат поля метаданных (например, имя автора, название и т.д.)</message>
 </locale>
