--- a/pkp-lib/locale/sr_SR/grid.xml
+++ b/pkp-lib/locale/sr_SR/grid.xml
@@ -22,8 +22,6 @@
 	<message key="grid.action.remove">Ukloni</message>
 	<message key="grid.action.edit">Izmeni</message>
 	<message key="grid.action.approve">Odobri</message>
-	<message key="grid.action.approveForReview">Predaj na recenziju</message>
-	<message key="grid.action.approveForPub">Odobri za publikaciju</message>
 	<message key="grid.action.decline">Odbi</message>
 	<message key="grid.action.moreInformation">Više informacija</message>
 	<message key="grid.action.restoreDefaults">Vrati na osnovne vrednosti</message>
@@ -37,9 +35,6 @@
 	<message key="grid.sponsor.title">Sponzori</message>
 
 	<!-- Masthead Grid -->
-	<message key="grid.masthead.title">Spisak urednika</message>
-	<message key="grid.masthead.column.groups">Grupe</message>
-
 	<!-- Contributor Grid -->
 	<message key="grid.contributor.title">Saradnici</message>
 	<message key="grid.action.addAuthor">Dodaj autora</message>
@@ -48,27 +43,7 @@
 	<message key="grid.reviewForm.title">Forme recenzija</message>
 
 	<!-- Book File Types Grid -->
-	<message key="grid.bookFileType.form.sortable">Dozvoli sortiranje fajlova ovog tipa po komponentama (npr. poglavljima)</message>
-
 	<!-- Artwork Files Grid -->
-	<message key="grid.artworkFile.title">Umetničko delo w/Dozvole</message>
-	<message key="grid.artworkFile.file">Fajl</message>
-	<message key="grid.artworkFile.form.title">Dodaj  w/Dozvole za umetničko delo</message>
-	<message key="grid.artworkFile.form.metadata">Meta podaci umetničkog dela</message>
-	<message key="grid.artworkFile.caption">Naslov</message>
-	<message key="grid.artworkFile.credit">Zasluge</message>
-	<message key="grid.artworkFile.captionAndCredit">Naslov i zasluge (Ukoliko nije sadržano u fajlu)</message>
-	<message key="grid.artworkFile.copyrightOwner">Vlasnik autorskih prava</message>
-	<message key="grid.artworkFile.copyrightContact">Informacije o ugovoru (ukoliko nije autor/izdavač)</message>
-	<message key="grid.artworkFile.permissionTerms">Uslovi dozvola</message>
-	<message key="grid.artworkFile.permissionForm">Forma dozvole</message>
-	<message key="grid.artworkFile.type">Tip</message>
-	<message key="grid.artworkFile.type.table">Tabela</message>
-	<message key="grid.artworkFile.type.figure">Slika</message>
-	<message key="grid.artworkFile.placement">Mesto u knjizi</message>
-	<message key="grid.artworkFile.placementDetail">Tabela/sl. br.</message>
-	<message key="grid.artworkFile.contactAuthor">Kontaktiraj autora</message>
-
 	<!-- Library Files -->
 	<message key="grid.libraryFiles.column.files">Fajlovi</message>
 	<message key="grid.libraryFiles.submission.title">Biblioteka predatih radova</message>
@@ -88,9 +63,38 @@
 	<message key="author.users.contributor.principalContact">Primarni kontakt</message>
 
 	<!-- Review Attachments -->
-	<message key="grid.reviewAttachments.title">Recenzentski dodatak</message>
-	<message key="grid.reviewAttachments.add">Priloži fajl uz recenziju</message>
-
 	<!-- Chapters -->
-	<message key="grid.chapters.title">Poglavlja</message>
+	<message key="grid.action.addUser">Dodaj korisnika</message>
+	<message key="grid.action.deleteFile">Obriši fajl</message>
+	<message key="grid.action.deleteMedia">Obriši medij.</message>
+	<message key="grid.action.editMedia">Uredi medij</message>
+	<message key="grid.action.editAuthor">Uredi autora</message>
+	<message key="grid.action.deleteAuthor">Obriši autora</message>
+	<message key="grid.action.upgrade">Nadogradi</message>
+	<message key="grid.action.order">Poredak</message>
+	<message key="grid.action.cancelOrdering">Poništi poredak</message>
+	<message key="grid.action.extendAll">Otvori se</message>
+	<message key="grid.action.collapse">Zatvori</message>
+	<message key="grid.action.collapseAll">zatvori sve</message>
+	<message key="grid.action.wizard">Čarobnjak podešavanja</message>
+	<message key="grid.action.moveItem">Premesti stavku</message>
+	<message key="grid.action.downloadFile">Preuzmi fajl</message>
+	<message key="grid.action.downloadAll">Preuzmi sve fajlove kao arhivu</message>
+	<message key="grid.action.readReview">Pročitaj recenziju</message>
+	<message key="grid.action.email">Pošalji imejl</message>
+	<message key="grid.action.addReviewer">Dodaj recenzenta</message>
+	<message key="grid.action.addFile">Dodaj fajl</message>
+	<message key="grid.action.editFile">Izmeni fajl</message>
+	<message key="grid.action.selectFiles">Obeleži fajlove za uređivanje</message>
+	<message key="grid.action.accept">Prihvati predaju</message>
+	<message key="grid.action.settings">Podešavanja</message>
+	<message key="grid.action.importexport">Uvezi ili izvezi sadržaj ili podatke sa sajta</message>
+	<message key="grid.action.addPreparedEmail">Dodaj novi imejl šablon</message>
+	<message key="grid.action.editPreparedEmail">Uredi šablon</message>
+	<message key="grid.action.disableEmail">Isključi šablon</message>
+	<message key="grid.action.resetEmail">Resetuj šablon na osnovne postavke</message>
+	<message key="grid.action.internalReview">Pošalji rad internom recenzentu</message>
+	<message key="grid.action.externalReview">Pošalji rad spoljašnjem recenzentu</message>
+	<message key="grid.action.sendToProduction">Pošalji rad u produkciju</message>
+	<message key="grid.action.orderItems">Onogući mod "poretka"</message>
 </locale>
