--- a/pkp-lib/locale/sr_SR/manager.xml
+++ b/pkp-lib/locale/sr_SR/manager.xml
@@ -216,4 +216,23 @@
 	<message key="plugins.categories.reports">Raport dodaci</message>
 	<message key="plugins.categories.themes.description">Dodatak šablona može se koristiti za promenu izgleda celokupnog sistema.</message>
 	<message key="plugins.categories.themes">Dodaci šablona</message>
+	<message key="manager.announcements.datePublish">Objavljeno</message>
+	<message key="manager.emails.addEmail">Dodaj šablon imejla</message>
+	<message key="manager.emails.data">Podaci poruke šablona</message>
+	<message key="manager.emails.details">Detalji šablona</message>
+	<message key="manager.emails.disable.message">Na putu ste da isključite ovaj imejl šablon. Ukoliko postoje procesi koji su ga koristili, više ga neće koristiti. Da li ste sigurni da želite da nastavite?</message>
+	<message key="manager.emails.enable.message">Da li ste sigurni da želite da uključite ovaj šablon?</message>
+	<message key="manager.emails.resetAll.message">Ukoliko resetujete sve šablone, sve modifikacije koje ste uradili biće izgubljene, da li ste sigurni da želite da nastavite?</message>
+	<message key="manager.emails.reset.message">Ukoliko resetujete ovaj šablon, svi podaci biće vraćeni na osnovne vrednosti, a sve promene će biti izgubljene, da li želite da nastavite?</message>
+	<message key="manager.masthead.title">Uprava</message>
+	<message key="manager.navigation">Navigacija</message>
+	<message key="manager.reviewerSearch.advancedSearch.short">Napredna pretraga</message>
+	<message key="manager.reviewerSearch.searchByName.short">Pretraži po imenu</message>
+	<message key="manager.reviewerSearch.form.interests.instructions">Unesite interese recenzenta odvojene zarezom.</message>
+	<message key="manager.setup.layout.blockManagement">Menadžer bočnog menija</message>
+	<message key="plugins.categories.metadata">Dodaci metapodataka</message>
+	<message key="plugins.categories.metadata.description">Dodaci metapodataka implementiraju dodatne standarde meta podataka.</message>
+	<message key="plugins.categories.citationLookup">Dodaci veza baza podataka citata</message>
+	<message key="plugins.categories.citationOutput">Dodaci izlaznog formata citata</message>
+	<message key="plugins.categories.citationParser">Dodaci za ekstrakciju citata</message>
 </locale>
