--- a/pkp-lib/locale/uk_UA/installer.xml
+++ b/pkp-lib/locale/uk_UA/installer.xml
@@ -68,6 +68,6 @@
 	<message key="installer.publicFilesDirError">Тека, визначена для збереження файлів, не існує або захищена від запису.</message>
 	<message key="installer.releaseNotes">Примітки версії</message>
 	<message key="installer.securitySettings">Налаштування безпеки</message>
-	<message key="installer.skipFilesDir">Не створювати необхідні підтеки (корисно лише у разі ручної інсталяції)</message>
 	<message key="installer.oaiSettings">Налаштування OAI</message>
+	<message key="installer.installParseFilterConfigFileError"><![CDATA[Помилка аналізу файлу фільтра конфігурації <tt>{$file}</tt>.]]></message>
 </locale>
