--- a/pkp-lib/locale/zh_CN/submission.xml
+++ b/pkp-lib/locale/zh_CN/submission.xml
@@ -373,4 +373,5 @@
 	<message key="submission.form.name">给这个文件一个有用的名称</message>
 	<message key="submission.form.replaceExisting">替换现有的文件吗？</message>
 	<message key="submission.citations.metadata.changeWarning">您确定要更新您的参考文献列表吗？如果点击OK键，任何编辑所做的更改都将被覆盖。如果您不确定是否应该更改参考文献列表，请联系管理您文件提交的编辑。</message>
+	<message key="submission.addFile">上传文件</message>
 </locale>
