--- a/pkp-lib/plugins/citationLookup/pubmed/locale/tr_TR/locale.xml
+++ b/pkp-lib/plugins/citationLookup/pubmed/locale/tr_TR/locale.xml
@@ -12,5 +12,5 @@
 
 <locale name="tr_TR" full_name="Türkiye Türkçesi">
 	<message key="plugins.citationLookup.pubmed.displayName">PubMed Veri Tabanı Bağlayıcısı</message>
-	<message key="plugins.citationLookup.pubmed.description">PubMed bibliyografik veri tabanına bağlan</message>
+	<message key="plugins.citationLookup.pubmed.description">PubMed bibliyografik veri tabanına bağlan.</message>
 </locale>
