--- a/pkp-lib/plugins/citationLookup/worldcat/locale/tr_TR/locale.xml
+++ b/pkp-lib/plugins/citationLookup/worldcat/locale/tr_TR/locale.xml
@@ -11,6 +11,6 @@
   -->
 
 <locale name="tr_TR" full_name="Türkiye Türkçesi">
-	<message key="plugins.citationLookup.worldcat.displayName">WorldCat Veritabanı Bağlayıcısı</message>
-	<message key="plugins.citationLookup.worldcat.description">WorldCat bibliyografik veri tabanına bağlan</message>
+	<message key="plugins.citationLookup.worldcat.displayName">WorldCat Veri Tabanı Bağlayıcısı</message>
+	<message key="plugins.citationLookup.worldcat.description">WorldCat bibliyografik veri tabanına bağlan.</message>
 </locale>
