--- a/pkp-lib/plugins/citationParser/freecite/locale/tr_TR/locale.xml
+++ b/pkp-lib/plugins/citationParser/freecite/locale/tr_TR/locale.xml
@@ -12,4 +12,5 @@
 
 <locale name="tr_TR" full_name="Türkiye Türkçesi">
 	<message key="plugins.citationParser.freecite.displayName">FreeCite Atıf Ayırıcı</message>
+	<message key="plugins.citationParser.freecite.description">FreeCite servisi üzerinden düz metin alıntıları alanlarını ayırır.</message>
 </locale>
