--- a/pkp-lib/plugins/citationParser/parscit/locale/tr_TR/locale.xml
+++ b/pkp-lib/plugins/citationParser/parscit/locale/tr_TR/locale.xml
@@ -12,4 +12,5 @@
 
 <locale name="tr_TR" full_name="Türkiye Türkçesi">
 	<message key="plugins.citationParser.parscit.displayName">ParsCit Atıf Ayırıcı</message>
+	<message key="plugins.citationParser.parscit.description">ParsCit servisi üzerinden düz metin atıf alanlarını ayırır.</message>
 </locale>
